# telegram-excel-poll

./: .gitignore  categories.py  pyproject.toml
src/: basic_handlers.py  categories.py  errors_handler.py  excel_pusher.py  main.py  settings.py  states.py
src/middlewares/: updates_dumper_middleware.py
